# cards-app

./: docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  settings.py
backend/api/: app.py  auth.py  depends.py
backend/api/routes/v1/: app.py
backend/api/routes/v1/handlers/: cards.py  decks.py  models.py
backend/migrations/models/: 0_20230201011234_init.py
backend/src/dal/db/: models.py
backend/src/service/: cards.py  decks.py
backend/src/utils/logging/: config.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Logo.js  SwipeCard.js
frontend/src/pages/: Deck.js  DeckCards.js  Desktop.js
frontend/src/utils/: creteRandomValue.js
